@@ -1,3 +1,8 @@
+commit 3953bf485970d79165f6db5cedf5d36fc634a831
+Date:   Wed May 27 12:11:55 2015 +0300
+
+    Fleshed out share/doc/02Architecture.txt.
+
 commit faa9763780de8434eb6eb1f7e857fb59d1b8ffff
 Date:   Thu May 21 23:10:09 2015 +0300
 
